Removing use of setters for ServiceProviders